@@ -1,11 +1,11 @@
 plugins {
-    id "com.gradle.plugin-publish" version "0.10.1"
+    id "com.gradle.plugin-publish" version "0.14.0"
     id 'java-gradle-plugin'
     id 'groovy'
 }
 
 group 'com.thinkimi.gradle'
-version '2.2'
+version '2.3'
 description "Mybatis Gradle Generator Plugin"
 
 apply plugin: 'groovy'
@@ -14,15 +14,14 @@ apply plugin: "com.gradle.plugin-publish"
 
 repositories {
     mavenCentral()
-    jcenter()
 }
 
 dependencies {
-    compile gradleApi()
-    compile localGroovy()
-    testCompile 'org.mybatis:mybatis:3.5.2'
-    testCompile "org.testcontainers:spock:1.13.0"
-    testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
+    implementation gradleApi()
+    implementation localGroovy()
+    testImplementation 'org.mybatis:mybatis:3.5.2'
+    testImplementation "org.testcontainers:spock:1.15.3"
+    testImplementation 'org.spockframework:spock-core:2.0-M5-groovy-3.0'
 }
 
 gradlePlugin {
@@ -47,6 +46,12 @@ configurations.functionalTestImplementation.extendsFrom(configurations.testImple
 task functionalTest(type: Test) {
     testClassesDirs = sourceSets.functionalTest.output.classesDirs
     classpath = sourceSets.functionalTest.runtimeClasspath
+    dependsOn(tasks.clean)
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+//    jvmArgs '--enable-preview'
 }
 
 check {
